@@ -51,8 +51,8 @@ struct MPDStatusValues {
         , songId(-1)
         , nextSong(-1)
         , nextSongId(-1)
-        , timeElapsed(-1)
-        , timeTotal(-1)
+        , timeElapsed(0)
+        , timeTotal(0)
         , bitrate(0)
         , samplerate(0)
         , bits(0)
